# zero

./: Cargo.toml  Dockerfile  LICENSE  README.md  spec.yaml
docs/: digital_ocean.md  handy.md
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
