[package]
name = "zero"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
config = "0.15.18"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls","macros","postgres","uuid","chrono","migrate"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
